<resources>
    <string name="app_name">Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">search</string>
    <string name="size">Size</string>
    <string name="colour_filter">Colour Filter</string>
    <string name="type">Type</string>
    <string name="site">Site</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string-array name="sizes">
        <item></item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>
    <string-array name="colour_filters">
        <item></item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
    </string-array>
    <string-array name="types">
        <item></item>
        <item>faces</item>
        <item>photo</item>
        <item>clip art</item>
        <item>line art</item>
    </string-array>
    <string-array name="sites">
        <item></item>
        <item>espn.com</item>
    </string-array>
    <string name="title_activity_detail">DetailActivity</string>
</resources>
