<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:text="@string/size"
        android:id="@+id/tvSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />


    <Spinner
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/spSize"
        android:layout_alignTop="@id/tvSize"
        android:layout_alignBottom="@id/tvSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tvSize"
        android:layout_toEndOf="@+id/tvSize"
        android:spinnerMode="dropdown"
        android:entries="@array/sizes"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/colour_filter"
        android:id="@+id/tvColour"
        android:layout_below="@+id/tvSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Spinner
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/spColour"
        android:layout_alignTop="@+id/tvColour"
        android:layout_alignBottom="@+id/tvColour"
        android:layout_toRightOf="@+id/tvColour"
        android:layout_toEndOf="@+id/tvColour"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dropdown"
        android:entries="@array/colour_filters"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/type"
        android:id="@+id/tvType"
        android:layout_below="@+id/tvColour"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Spinner
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/spType"
        android:layout_toRightOf="@+id/tvType"
        android:layout_toEndOf="@+id/tvType"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/tvType"
        android:layout_alignBottom="@id/tvType"
        android:spinnerMode="dropdown"
        android:entries="@array/types"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/site"
        android:id="@+id/tvSite"
        android:layout_below="@+id/tvType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/etSite"
        android:layout_toRightOf="@+id/tvSite"
        android:layout_toEndOf="@+id/tvSite"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/tvSite"
        android:layout_alignBottom="@id/tvSite"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_below="@+id/tvSite"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cancel"
        android:id="@+id/btnCancel"
        android:layout_below="@+id/etSite"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>